<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/disabled"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/LeftGuide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".1"/>
    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/RightGuide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".9"/>
    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/TopGuide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".1"/>
    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/BottomGuide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".9"/>
    <Spinner
            android:id="@+id/PlayerNumberSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/num_players"
            app:layout_constraintTop_toBottomOf="@id/TopGuide"
            app:layout_constraintStart_toEndOf="@id/LeftGuide"
            app:layout_constraintEnd_toStartOf="@id/PlayerCountLabel"/>
    <TextView
            android:id="@+id/PlayerCountLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/player_count"
            android:textSize="@dimen/small_font"
            app:layout_constraintTop_toBottomOf="@id/TopGuide"
            app:layout_constraintStart_toEndOf="@id/PlayerNumberSpinner"
            app:layout_constraintEnd_toStartOf="@id/PresetSpinner"/>
    <Spinner
            android:id="@+id/PresetSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/num_players"
            app:layout_constraintTop_toBottomOf="@id/TopGuide"
            app:layout_constraintStart_toEndOf="@id/PlayerCountLabel"
            app:layout_constraintEnd_toStartOf="@id/PresetLabel"/>
    <TextView
            android:id="@+id/PresetLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/presets"
            android:textSize="@dimen/small_font"
            app:layout_constraintTop_toBottomOf="@id/TopGuide"
            app:layout_constraintStart_toEndOf="@id/PresetSpinner"
            app:layout_constraintEnd_toStartOf="@id/RightGuide"/>
    <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/TeamsSwitch"
            android:rotation="180"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/PresetLabel"
            app:layout_constraintStart_toEndOf="@id/LeftGuide"
            app:layout_constraintEnd_toStartOf="@id/TeamsLabel"/>
    <TextView
            android:id="@+id/TeamsLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/teams"
            android:textSize="@dimen/small_font"
            app:layout_constraintTop_toBottomOf="@id/PresetLabel"
            app:layout_constraintBottom_toBottomOf="@id/TeamsSwitch"
            app:layout_constraintStart_toEndOf="@id/TeamsSwitch"
            app:layout_constraintEnd_toStartOf="@id/BossSwitch"/>
    <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/BossSwitch"
            android:rotation="180"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/PresetLabel"
            app:layout_constraintStart_toEndOf="@id/TeamsLabel"
            app:layout_constraintEnd_toStartOf="@id/BossLabel" />
    <TextView
            android:id="@+id/BossLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/boss_mode"
            android:textSize="@dimen/small_font"
            app:layout_constraintTop_toBottomOf="@id/PresetLabel"
            app:layout_constraintBottom_toBottomOf="@id/BossSwitch"
            app:layout_constraintStart_toEndOf="@id/BossSwitch"
            app:layout_constraintEnd_toStartOf="@id/RightGuide"/>
    <TextView
            android:id="@+id/UniversalValuesLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/universal_values"
            android:textSize="@dimen/med_font"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/BossSwitch"
            app:layout_constraintBottom_toTopOf="@id/HealthPicker"
            app:layout_constraintStart_toEndOf="@id/LeftGuide"
            app:layout_constraintEnd_toStartOf="@id/RightGuide"/>
    <NumberPicker
            android:id="@+id/HealthPicker"
            android:layout_width="0dp"
            android:layout_height="75dp"
            app:layout_constraintTop_toBottomOf="@id/UniversalValuesLabel"
            app:layout_constraintBottom_toTopOf="@id/ForcePoolPicker"
            app:layout_constraintStart_toStartOf="@id/LeftGuide"
            app:layout_constraintEnd_toStartOf="@id/HealthLabel"/>
    <TextView
            android:id="@+id/HealthLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/starting_health"
            android:textSize="@dimen/small_font"
            app:layout_constraintTop_toTopOf="@id/HealthPicker"
            app:layout_constraintBottom_toBottomOf="@id/HealthPicker"
            app:layout_constraintStart_toEndOf="@id/HealthPicker"
            app:layout_constraintEnd_toStartOf="@id/StartingForcePicker"/>
    <NumberPicker
            android:id="@+id/StartingForcePicker"
            android:layout_width="0dp"
            android:layout_height="75dp"
            app:layout_constraintTop_toTopOf="@id/HealthPicker"
            app:layout_constraintBottom_toBottomOf="@id/HealthPicker"
            app:layout_constraintStart_toEndOf="@id/HealthLabel"
            app:layout_constraintEnd_toStartOf="@id/StartingForceLabel"/>
    <TextView
            android:id="@+id/StartingForceLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/starting_force"
            android:textSize="@dimen/small_font"
            app:layout_constraintTop_toTopOf="@id/HealthPicker"
            app:layout_constraintBottom_toBottomOf="@id/HealthPicker"
            app:layout_constraintStart_toEndOf="@id/StartingForcePicker"
            app:layout_constraintEnd_toStartOf="@id/RightGuide"/>
    <NumberPicker
            android:id="@+id/ForcePoolPicker"
            android:layout_width="0dp"
            android:layout_height="75dp"
            app:layout_constraintTop_toBottomOf="@id/HealthPicker"
            app:layout_constraintBottom_toTopOf="@id/EditPlayerPane"
            app:layout_constraintStart_toEndOf="@id/LeftGuide"
            app:layout_constraintEnd_toStartOf="@id/ForcePoolLabel"/>
    <TextView
            android:id="@+id/ForcePoolLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/force_pool"
            android:textSize="@dimen/small_font"
            app:layout_constraintTop_toTopOf="@id/ForcePoolPicker"
            app:layout_constraintBottom_toBottomOf="@id/ForcePoolPicker"
            app:layout_constraintStart_toEndOf="@id/ForcePoolPicker"
            app:layout_constraintEnd_toStartOf="@id/RightGuide"/>
    <ScrollView
            android:id="@+id/EditPlayerPane"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/ForcePoolPicker"
            app:layout_constraintBottom_toTopOf="@id/BottomGuide"
            app:layout_constraintStart_toEndOf="@id/LeftGuide"
            app:layout_constraintEnd_toStartOf="@id/RightGuide"/>
</androidx.constraintlayout.widget.ConstraintLayout>