<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/disabled"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".layouts.SettingsMenu">
    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/LeftGuide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".2"/>
    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/RightGuide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".8"/>
    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/TopGuide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".15"/>
    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/BottomGuide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".85"/>
    <ImageButton
            android:id="@+id/BackButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/arrow_left"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:contentDescription="@string/back"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/TopGuide"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/LeftGuide" />
    <ImageButton
            android:id="@+id/ResetGameButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/arrow_circle"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:contentDescription="@string/reset_game"
            app:layout_constraintTop_toBottomOf="@id/TopGuide"
            app:layout_constraintBottom_toTopOf="@id/ResetGameLabel"
            app:layout_constraintStart_toEndOf="@id/LeftGuide"
            app:layout_constraintEnd_toStartOf="@id/RightGuide"/>
    <TextView
            android:id="@+id/ResetGameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_game"
            android:textSize="@dimen/small_font"
            app:layout_constraintTop_toBottomOf="@id/ResetGameButton"
            app:layout_constraintBottom_toTopOf="@id/TeamsButton"
            app:layout_constraintStart_toEndOf="@id/LeftGuide"
            app:layout_constraintEnd_toStartOf="@id/RightGuide"/>
    <ImageButton
            android:id="@+id/TeamsButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/collaboration"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:contentDescription="@string/team_mode"
            app:layout_constraintTop_toBottomOf="@id/ResetGameLabel"
            app:layout_constraintBottom_toTopOf="@id/TeamsLabel"
            app:layout_constraintStart_toEndOf="@id/LeftGuide"
            app:layout_constraintEnd_toStartOf="@id/BossButton"/>
    <TextView
            android:id="@+id/TeamsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/team_mode"
            android:textSize="@dimen/small_font"
            app:layout_constraintTop_toBottomOf="@id/TeamsButton"
            app:layout_constraintBottom_toTopOf="@id/SuperButton"
            app:layout_constraintStart_toEndOf="@id/LeftGuide"
            app:layout_constraintEnd_toStartOf="@id/BossLabel"/>
    <ImageButton
            android:id="@+id/BossButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/dragon"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:contentDescription="@string/boss_mode"
            app:layout_constraintTop_toBottomOf="@id/ResetGameLabel"
            app:layout_constraintBottom_toTopOf="@id/BossLabel"
            app:layout_constraintStart_toEndOf="@id/TeamsButton"
            app:layout_constraintEnd_toStartOf="@id/RightGuide"/>
    <TextView
            android:id="@+id/BossLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boss_mode"
            android:textSize="@dimen/small_font"
            app:layout_constraintTop_toBottomOf="@id/BossButton"
            app:layout_constraintBottom_toTopOf="@id/UltraButton"
            app:layout_constraintStart_toEndOf="@id/TeamsLabel"
            app:layout_constraintEnd_toStartOf="@id/RightGuide"/>
    <ImageButton
            android:id="@+id/SuperButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/biceps"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:contentDescription="@string/super_mode"
            app:layout_constraintTop_toBottomOf="@id/TeamsLabel"
            app:layout_constraintBottom_toTopOf="@id/SuperLabel"
            app:layout_constraintStart_toEndOf="@id/LeftGuide"
            app:layout_constraintEnd_toStartOf="@id/UltraButton"/>
    <TextView
            android:id="@+id/SuperLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/super_mode"
            android:textSize="@dimen/small_font"
            app:layout_constraintTop_toBottomOf="@id/SuperButton"
            app:layout_constraintBottom_toTopOf="@id/BottomGuide"
            app:layout_constraintStart_toEndOf="@id/LeftGuide"
            app:layout_constraintEnd_toStartOf="@id/UltraLabel"/>
    <ImageButton
            android:id="@+id/UltraButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/freedom"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:contentDescription="@string/ultra_mode"
            app:layout_constraintTop_toBottomOf="@id/BossLabel"
            app:layout_constraintBottom_toTopOf="@id/UltraLabel"
            app:layout_constraintStart_toEndOf="@id/SuperButton"
            app:layout_constraintEnd_toStartOf="@id/RightGuide"/>
    <TextView
            android:id="@+id/UltraLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ultra_mode"
            android:textSize="@dimen/small_font"
            app:layout_constraintTop_toBottomOf="@id/UltraButton"
            app:layout_constraintBottom_toTopOf="@id/BottomGuide"
            app:layout_constraintStart_toEndOf="@id/SuperLabel"
            app:layout_constraintEnd_toStartOf="@id/RightGuide"/>
</androidx.constraintlayout.widget.ConstraintLayout>